--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,10 @@
     background: #22242A;
     padding: 20px;
     width: 100%;
-    height: 60 px;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    top: 0;
 }
 
 .left_area h3{
@@ -31,7 +34,6 @@ button{
     padding: 5px;
     background : #19B3D3;
     text-decoration :none;
-    float:right;
     margin-top: -25px;
     margin-right: 40px;
     border-radius : 2px;
