--- a/src/components/LeftNav/LeftNav.css
+++ b/src/components/LeftNav/LeftNav.css
@@ -1,11 +1,12 @@
 .LeftNav{
   background: #2F323A;
-  margin-top: 70px;
+  margin-top: 60px;
   padding-top: 30px;
   position: fixed;
   left: 0;
   width: 200px;
-  height:100%;
+  height: 100%;
+  top: 0;
 }
 
 .LeftNav h4{
